# PROJET-2

./: Dataframe_IMDB+TMDB.ipynb  README.md  app.py  main.py  pyproject.toml  requirements.txt
