[project]
name = "cinema"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "deep-translator>=1.11.4",
    "matplotlib>=3.10.8",
    "scikit-learn>=1.8.0",
    "streamlit-authenticator>=0.4.2",
    "streamlit-option-menu>=0.4.0",
]
